--- a/ms-publicaciones/src/main/resources/application.yaml
+++ b/ms-publicaciones/src/main/resources/application.yaml
@@ -1,13 +1,17 @@
 server:
-  port: 8081
+  #port: 8081
+  port: 0
 
 spring:
   application:
     name: servicio-publicaciones  # Nombre consistente en minúsculas
   datasource:
-    url: jdbc:postgresql://localhost:5432/db-publications
-    username: postgres
-    password: qwerty123
+    #url: jdbc:postgresql://localhost:5432/db-publications
+    #username: postgres
+    #password: qwerty123
+    url: jdbc:postgresql://localhost:26257/publicaciones_db?user=root&password=
+    username: root
+    password:
   jpa:
     hibernate:
       ddl-auto: create-drop
