--- a/ms-notificaciones/src/main/resources/application.yml
+++ b/ms-notificaciones/src/main/resources/application.yml
@@ -2,12 +2,12 @@ spring:
   application:
     name: SERVICIO-NOTIFICACIONES
   datasource:
-    #url: jdbc:postgresql://localhost:5432/bd-notificaciones
-    #username: postgres
-    #password: qwerty123
-    url: jdbc:postgresql://localhost:26257/notificaciones_db?user=root&password=
-    username: root
-    password:
+    url: jdbc:postgresql://localhost:5432/notificaciones_db
+    username: postgres
+    password: qwerty123
+    #url: jdbc:postgresql://localhost:26257/notificaciones_db?user=root&password=
+    #username: root
+    #password:
   jpa:
     hibernate:
       #ddl-auto: update
